# KURSACH

./: CMakeLists.txt
char_config/: Archer.txt  Damager.txt  Tank.txt  Wisard.txt
demo/: main.cpp
enemy_config/: enemy1.txt
include/: battle.hpp  battle_graphics.hpp  character.hpp  enemy.hpp  main_menu.hpp
sources/: battle.cpp  battle_animation.cpp  battle_drowing.cpp  battle_graphics.cpp  battle_load.cpp  battle_press_event.cpp  character.cpp  enemy.cpp  main_menu.cpp
